<resources>
    <string name="app_name">Magic Coffee</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGllcGRhbyIsImEiOiJjbGc2OTc0ZmcwYjJxM3FuOTZxNDk5MXphIn0.F7vJPlN68YElhVLjktU18Q</string>
    <string name="home">Trang chủ</string>
    <string name="order">Đặt hàng</string>
    <string name="store">Cửa hàng</string>
    <string name="other">Khác</string>
    <string name="welcome_text">Chào mừng bạn đến với</string>
    <string name="enter_sdt_hint">Nhập số điện thoại</string>
    <string name="login_text">ĐĂNG NHẬP</string>
    <string name="or_text">HOẶC</string>
    <string name="continue_with_fb_text">Tiếp tục với Facebook</string>
    <string name="continue_with_gg_text">Tiếp tục với Google</string>
    <string name="drink">Đồ uống</string>
    <string name="order_history">Lịch sử đơn hàng</string>
    <string name="string_support">Hỗ trợ</string>
    <string name="util_string">Tiện ích</string>
    <string name="string_rating">Đánh giá đơn hàng</string>
    <string name="string_contact">Liên hệ và góp ý</string>
    <string name="string_account">Tài khoản</string>
    <string name="string_personal_info">Thông tin cá nhân</string>
    <string name="string_location">Địa chỉ đã lưu</string>
    <string name="string_setting">Cài đặt</string>
    <string name="string_logout">Đăng xuất</string>
    <string name="chose">Chọn</string>
    <string name="suggestion_text">Gợi ý riêng cho bạn</string>
    <string name="voucher_text">Phiếu ưu đãi của bạn</string>
    <string name="string_update_info">Cập nhật thông tin     </string>
    <string name="string_first_name_hint">Họ của bạn</string>
    <string name="string_hint_last_name">Tên của bạn</string>
    <string name="string_hint_email">Email của bạn</string>
    <string name="string_hint_dob">Ngày sinh của bạn</string>
    <string name="string_btn_update">Cập nhật tài khoản</string>
    <string name="string_delete_account">Xóa tài khoản    </string>
    <string name="delete_account_txt">Thật buồn khi biết bạn sắp rời. Tất cả thông tin cá nhân của bạn như số điện thoại, email, … đếu sẽ bị xóa.\n \nChúng mình mong bạn đã có trải nghiệm tuyệt vời khi sử dụng dịch vụ của chúng mình.</string>
    <string name="string_confirm_delete_account">Xác nhận xóa tài khoản</string>
    <string name="string_hint_phone_number">Số điện thoại của bạn</string>
    <string name="coffee_text">Cà phê</string>
    <string name="tea">Trà</string>
    <string name="fruit_juice_text">Nước hoa quả</string>
    <string name="cake_text">Bánh ngọt</string>
    <string name="size">Size<font color="red">*</font></string>
    <string name="chose_one_size">Chọn 1 loại size</string>
    <string name="topping">Topping</string>
    <string name="topping1">Kem Phô Mai Macchiato - 10.000đ</string>
    <string name="topping2">Shot Espesso - 10.000đ</string>
    <string name="topping3">Sốt Caramel - 10.000đ</string>
    <string name="topping4">Thạch Cà - 10.000đ</string>
    <string name="topping5">Trân Châu Trắng - 10.000đ</string>
    <string name="order_confirm">Xác nhận đơn hàng</string>
    <string name="delete">Xóa</string>
    <string name="order_information">Thông tin giao hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="selected_product">Sản phẩm đã chọn</string>
    <string name="add">+ Thêm</string>
    <string name="total">Tổng cộng</string>
    <string name="checkout">Thanh toán</string>
    <string name="chose_voucher">Chọn voucher</string>
    <string name="ship_price">Phí giao hàng</string>
    <string name="total_price">Số tiền thanh toán</string>
    <string name="chose_payment">Chọn phương thức thanh toán</string>
    <string name="price">%1$f</string>
    <string name="none">None</string>
    <string name="remove_product">"Bỏ chọn sản phẩm này"</string>
    <string name="shipping_price">18.000đ</string>
    <string name="start_order">Bắt đầu đặt hàng</string>
    <string name="are_you_sure_you_want_to_delete_the_order">Bạn có chắc chắn muốn xóa đơn hàng?</string>
    <string name="accept_text">Đồng ý</string>
    <string name="cancel_text">Hủy</string>
    <string name="change_txt">Thay đổi</string>
    <string name="receive_person">Người nhận</string>
    <string name="done">Xong</string>
    <string name="name_receiver">Tên người nhận</string>
    <string name="enter_name">Nhập tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="paypal">Paypal</string>
    <string name="money">Tiền mặt</string>
    <string name="payment_way">Cách thanh toán</string>
    <string name="payment_methods">Phương thức thanh toán</string>
    <string name="ready_to_use">Sẵn sàng sử dụng</string>
    <string name="verify_sms_otp">Xác nhận Mã OTP</string>
    <string name="message_verify_sms_otp">Một mã xác thực gồm 6 số đã được gửi đến số điện thoại</string>
    <string name="enter_otp">Nhập mã OTP</string>
    <string name="send_review">Gửi đánh giá</string>
    <string name="order_review">Đánh giá đơn hàng</string>
    <string name="order_status">Trạng thái đơn hàng</string>
    <string name="review">Đánh giá</string>
    <string name="reorder">Đặt lại</string>
    <string name="are_you_sure_you_want_to_logout">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="add_new_address">Thêm địa chỉ mới</string>
    <string name="enter_new_address">Nhập địa chỉ</string>
    <string name="please_enter_your_address">Vui lòng nhập địa chỉ</string>
    <string name="please_enter_your_name">Vui lòng nhập tên người nhận</string>
    <string name="please_enter_your_phone">Vui lòng nhập số điện thoại người nhận</string>
    <string name="update">Cập nhật</string>
    <string name="ok">OK</string>
    <string name="total_order">Tổng cộng</string>
    <string name="selected_products">Sản phẩm đã chọn</string>
    <string name="order_empty">Đơn hàng trống</string>
</resources>