<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.other.OtherFragment">

    <RelativeLayout
        android:id="@+id/otherRelativeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineProvider="bounds"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.Coffee.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/notification_btn"
            android:layout_alignBottom="@id/notification_btn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/other"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/notification_btn"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/ripple_background"
            android:elevation="@dimen/elevation"
            android:src="@drawable/icon_notifications"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/notification_btn"
            android:background="@color/ripple" />

    </RelativeLayout>

    <TextView
        android:id="@+id/util_txt"
        style="@style/TextAppearance.Coffee.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/util_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otherRelativeView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history_order_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/icon_history"
        android:paddingHorizontal="150dp"
        android:paddingStart="20dp"
        android:text="@string/order_history"
        android:textAllCaps="false"
        android:textColor="@color/on_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/util_txt" />

    <TextView
        android:id="@+id/account_txt"
        style="@style/TextAppearance.Coffee.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/string_account"
        android:textSize="@dimen/body_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_order_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/person_info_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/icon_personal"
        android:paddingHorizontal="150dp"
        android:paddingStart="20dp"
        android:text="@string/string_personal_info"
        android:textAllCaps="false"
        android:textColor="@color/on_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_txt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/icon_location"
        android:paddingHorizontal="170dp"
        android:paddingStart="20dp"
        android:text="@string/string_location"
        android:textAllCaps="false"
        android:textColor="@color/on_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_info_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/icon_logout"
        android:paddingHorizontal="200dp"
        android:paddingStart="20dp"
        android:text="@string/string_logout"
        android:textAllCaps="false"
        android:textColor="@color/on_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>