<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.updateaccount.UpdateInformationFragment">

    <RelativeLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:outlineProvider="bounds"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/ripple_background"
            android:src="@drawable/icon_back"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/update_info_title"
            style="@style/TextAppearance.Coffee.Headline5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_alignTop="@id/back_btn"
            android:layout_alignBottom="@id/back_btn"
            android:layout_marginEnd="@dimen/icon_medium"
            android:layout_toEndOf="@id/back_btn"
            android:gravity="center"
            android:text="@string/string_update_info"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/back_btn"
            android:background="@color/ripple" />
    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin_large"
        android:background="@color/on_primary"
        android:elevation="@dimen/elevation"
        android:src="@drawable/img_background_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:shapeAppearanceOverlay="@style/circular" />

    <EditText
        android:id="@+id/enter_first_name"
        style="@style/TextAppearance.Coffee.Body1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_x_large"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/string_first_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_img"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/enter_last_name"
        style="@style/TextAppearance.Coffee.Body1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/string_hint_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_first_name"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/enter_email"
        style="@style/TextAppearance.Coffee.Body1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/string_hint_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_last_name"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/enter_phone_num"
        style="@style/TextAppearance.Coffee.Body1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/string_hint_phone_number"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_email"
        tools:ignore="Autofill,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/bg_edit_text"
        android:backgroundTint="@color/primary"
        android:text="@string/string_btn_update"
        android:textAllCaps="false"
        android:textColor="@color/surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_num" />

    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_x_large"
        android:background="@drawable/ripple_background"
        android:gravity="center"
        android:paddingHorizontal="@dimen/padding_medium"
        android:text="@string/string_delete_account"
        android:textColor="@color/on_surface"
        app:drawableStartCompat="@drawable/icon_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>